# openai-discord-bot

./: .gitignore  bot.py  pyproject.toml
openai_discord_bot/: chat.py  config.py  enums.py
